--- a/astroblog/templates/aboutus.html
+++ b/astroblog/templates/aboutus.html
@@ -1,5 +1,17 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    about us!
+    <div class="container">
+        <div class="row">
+            <div class="col s12">
+                <h1>About us</h1>
+            </div>
+        </div>
+        <hr>
+        <div class="row">
+            <div class="col s12">
+                 <p class="flow-text">Astroblog was made by a group of astrophysics enthusiasts, who wanted to create a place where people like them can come together and wonder about the universe together</p>
+            </div>
+        </div>
+    </div>
 {% endblock %}
