--- a/astroblog/templates/unauthorized.html
+++ b/astroblog/templates/unauthorized.html
@@ -11,5 +11,5 @@
     <div class="text white-text">
         <h1>403 Forbidden!</h1>
     </div>
-    <img src="{% static 'bg.jpg' %}" style="width: 100%;" height='100%'>
+    <img src="{% static 'forbiddenbg.jpg' %}" style="width: 100%;" height='100%'>
 {% endblock %}
