--- a/accounts/templates/accounts/authenticate.html
+++ b/accounts/templates/accounts/authenticate.html
@@ -1,4 +1,12 @@
 {% extends 'layout.html' %} 
+{% load staticfiles %}
+{% block bodytag %}
+    <body style="background: url('{% static 'bgs/bg13.jpg' %}') no-repeat center center fixed;
+                 -webkit-background-size: cover;
+                 -moz-background-size: cover;
+                 -o-background-size: cover;
+                 background-size: cover;" class="white-text">
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
@@ -14,14 +22,15 @@
             <form id="loginform" method="post" action="{% url 'login' %}">
                 {% csrf_token %}
                 <div class="input-field">
-                    <input placeholder="Enter your username here" name="username" id="username" type="text" class="validate">
+                    <input placeholder="Enter your username here" class="white-text" name="username" id="username" type="text" class="validate">
                     <label for="username">Username</label>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Enter your password here" name="password" id="password" type="password" class="validate">
+                    <input placeholder="Enter your password here" class="white-text" name="password" id="password" type="password" class="validate">
                     <label for="password">Password</label>
                 </div>
                 <a class="btn waves-effect purple hoverable" href="javascript:{document.getElementById('loginform').submit()}">Login</a>
+                <input type="hidden" name="next" value="{{ next }}" />
             </form>
         </div>
         <div class="col s4 offset-s4 right-align">
@@ -36,22 +45,23 @@
             <form id="signupform" method="post" action="{% url 'signup' %}">
                 {% csrf_token %}
                 <div class="input-field">
-                    <input placeholder="Enter your username here" name="username" id="username" type="text" class="validate">
+                    <input placeholder="Enter your username here" class="white-text" name="username" id="username" type="text" class="validate">
                     <label for="username">Username</label>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Enter your email here" name="email" id="email" type="email" class="validate">
+                    <input placeholder="Enter your email here" class="white-text" name="email" id="email" type="email" class="validate">
                     <label for="email">Email</label>
                     <span class="helper-text" data-error="Invalid email address" data-success="Valid">Enter a valid email: example@website.com</span>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Password to register with" name="password" id="password" type="password" class="validate">
+                    <input placeholder="Password to register with" class="white-text" name="password" id="password" type="password" class="validate">
                     <label for="password">Password</label>
                 </div>
                 <div class="input-field">
-                    <input placeholder="Confirm your password here" name="confirmpassword" id="confirmpassword" type="password" class="validate">
+                    <input placeholder="Confirm your password here" class="white-text" name="confirmpassword" id="confirmpassword" type="password" class="validate">
                     <label for="confirmpassword">Confirm password</label>
                 </div>
+                <input type="hidden" name="next" value="{{ next }}" />
                 <a class="btn waves-effect blue hoverable" href="javascript:{document.getElementById('signupform').submit()}">Signup</a>
             </form>
         </div>
