--- a/astroblog/templates/aboutus.html
+++ b/astroblog/templates/aboutus.html
@@ -1,5 +1,19 @@
 {% extends 'layout.html' %}
-
+{% load staticfiles %}
+{% block notification_block %}
+    {% if notification_count %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
+{% endblock %}
+{% block bodytag %}
+    <body style="background: url('{% static 'bgs/bg5.jpg' %}') no-repeat center center fixed;
+                 -webkit-background-size: cover;
+                 -moz-background-size: cover;
+                 -o-background-size: cover;
+                 background-size: cover;" class="white-text">
+{% endblock %}
 {% block content %}
     <div class="container">
         <div class="row">
@@ -10,7 +24,14 @@
         <hr>
         <div class="row">
             <div class="col s12">
-                 <p class="flow-text">Astroblog was made by a group of astrophysics enthusiasts, who wanted to create a place where people like them can come together and wonder about the universe together</p>
+                 <p class="flow-text"><em>“My thoughts are stars that I cannot fathom into constellations.” -Augustus Waters, The Fault in Our Stars</em>
+<br>
+<br>
+Welcome to our blog which is a literary embodiment of the above quote. Except our thoughts are quite literally the stars that probably are a part of a constellation or at least a star cluster. 
+<br>
+<br>
+The blog was developed by wannabe astrophysicists with the aim of creating a space for people with a deep-interest in space so that they can ponder over the mysteries of the cosmos and geek about the gravitational wave dance. <em>*insert stuff you can do*.</em>
+I solemnly swear that we’re punny and we deliver great content which is moderated by amazing people to ensure that there are no trolls.</p>
             </div>
         </div>
     </div>
