--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,11 +1,19 @@
 {% extends 'layout.html' %} 
+
 {% load staticfiles %}
 {% block bodytag %}
-    <body style="background: url('{% static 'bg.jpg' %}') no-repeat center center fixed;
+    <body style="background: url('{% static 'bgs/bg14.jpg' %}') no-repeat center center fixed;
                  -webkit-background-size: cover;
                  -moz-background-size: cover;
                  -o-background-size: cover;
                  background-size: cover;" class="white-text">
+{% endblock %}
+{% block notification_block %}
+    {% if notification_count %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -28,7 +36,7 @@
             <h6>{{ post.dateandtime }}</h6>
         </div>
         <div class="col s8 right-align">
-            <h6>Written by {{ post.author.username }}</h6>
+            <h6>Written by <a href="{% url 'userdetails' post.author.id %}">{{ post.author.username }}</a></h6>
         </div>
     </div>
     <div class="row">
