--- a/blog/templates/blog/userkeeps.html
+++ b/blog/templates/blog/userkeeps.html
@@ -1,41 +1,62 @@
 {% extends 'layout.html' %} 
+{% block notification_block %}
+    {% if notification_count %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications <span class="red-text">{{ notification_count }}</span></a></li>
+    {% else %}
+        <li><a href="{% url 'notifications' user.id %}">Notifications</a></li>
+    {% endif %}
+{% endblock %}
+{% load staticfiles %}
+{% block bodytag %}
+    <body class="white-text" style="background: url('{% static 'bgs/bg11.jpg' %}') no-repeat center center fixed;
+                 -webkit-background-size: cover;
+                 -moz-background-size: cover;
+                 -o-background-size: cover;
+                 background-size: cover;">
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
         <div class="col s12">
-            <h1>{{ user }}'s kept posts</h1>
+            <h1><a href="{% url 'userdetails' user.id %}">{{ user }}</a>'s kept posts 
+            {% if keeps.count %}
+                - {{ keeps.count }}
+            {% endif %}</h1>
         </div>
     </div>
     <hr>
-    {% for post in posts %}
+    {% for keep in keeps %}
     <div class="row">
         <div class="col s12">
-            <h4>{{ post.title }}</h4>
+            <h4>{{ keep.blog_post.title }}</h4>
         </div>
     </div>
     <div class="row">
         <div class="col s4">
-            <h6>{{ post.dateandtime }}</h6>
+            <h6>{{ keep.blog_post.dateandtime }}</h6>
         </div>
     </div>
     <div class="row">
         <div class="col s12">
-            <em>{{ post.intro }}</em>
+            <em>{{ keep.blog_post.intro }}</em>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col s6">
+             <h6>Written under <strong>{{ keep.blog_post.category }}</strong></h6>
+        </div>
+        <div class="col s6 right-align">
+            <p>Private keep: <strong>{{ keep.is_private }}</strong></p>
         </div>
     </div>
     <div class="row">
         <div class="col s12">
-             <h6>Written under <strong>{{ post.category }}</strong></h6>
+            <img src="{{ keep.blog_post.image.url }}" class="responsive-img" />
         </div>
     </div>
     <div class="row">
         <div class="col s12">
-            <img src="{{ post.image.url }}" class="responsive-img" />
-        </div>
-    </div>
-    <div class="row">
-        <div class="col s12">
-            {{ post.summary | safe }}<a href="{% url 'blogpost' post.id %}">....(read more)</a>
+            {{ keep.blog_post.summary | safe }}<a href="{% url 'blogpost' keep.blog_post.id %}">....(read more)</a>
         </div>
     </div>
     <hr>
