Finalized background images

--- a/astroblog/templates/queries.html
+++ b/astroblog/templates/queries.html
@@ -8,7 +8,7 @@
 {% endblock %}
 {% load staticfiles %}
 {% block bodytag %}
-    <body style="background: url('{% static 'bgs/bg8.jpg' %}') no-repeat center center fixed;
+    <body8 style="background: url('{% static 'bgs/bg15.jpg' %}') no-repeat center center fixed;
                  -webkit-background-size: cover;
                  -moz-background-size: cover;
                  -o-background-size: cover;
