--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,7 +2,7 @@
 
 {% load staticfiles %}
 {% block bodytag %}
-    <body style="background: url('{% static 'bgs/bg14.jpg' %}') no-repeat center center fixed;
+    <body style="background: url('{% static 'bgs/bgtest4.jpg' %}') no-repeat center center fixed;
                  -webkit-background-size: cover;
                  -moz-background-size: cover;
                  -o-background-size: cover;
